css/style.css
/* ... */
.career_bottom__desc {
  text-align: left;
}

.career_bottom__list {
  display: flex;
  padding: 0 80px 40px;
  justify-content: space-between;
}

.career_bottom__list ul {
  width: auto;
  max-width: 290px;
  padding: 0;
}

.career_bottom__list li {
  display: block;
}

.career_bottom__button {
  padding: 0 60px;
  margin: auto 0 0;
}

.career_bottom__button span {
  max-width: 100%;
  width: 100%;
  padding: 0;
}

.career_bottom__button .button__hover {
  position: absolute;
}

.career_bottom__list b {
  color: var(--text);
}

.career_popup,
.feedback_popup {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 640px;
  height: var(--height);
  flex-direction: column;
  position: fixed;
  top: 0px;
  right: 0;
  z-index: 102;
  background-color: var(--bg);
  opacity: 0;
  -webkit-transform: translateX(100%);
  transform: translateX(100%);
  -webkit-transition: -webkit-transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s, top 0s linear 1.4s;
  transition: transform 1.4s cubic-bezier(0.77, 0, 0.175, 1) 0.15s, opacity 0s linear 1.4s, top 0s linear 1.4s;
  overflow: hidden;
}

.career_popup.active,
.feedback_popup.active {
  top: 0px;
  opacity: 1;
  -webkit-transition: -webkit-transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0.2s, opacity 0s linear 0s, top 0s linear 0.2s;
  transition: transform 1.1s cubic-bezier(0.77, 0, 0.175, 1) 0s, opacity 0.2s linear 0s, top 0s linear 0.2s;
  -webkit-transform: translateX(0%);
  transform: translateX(0%);
}

.career_popup__container,
.feedback_popup__container {
  height: 100%;
  padding: 0 60px;
}

.career_popup__blocks,
.feedback_popup__blocks {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: max-content;
  min-height: var(--height);
  padding: 80px 0;
  flex-direction: column;
  justify-content: center;
  position: relative;
}

.career_popup__block,
.feedback_popup__block {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  justify-content: center;
  gap: 0 44px;
}

.career_popup__forms_form,
.feedback_popup__forms_form {
  width: 100%;
}

.career_popup__form_bottom,
.feedback_popup__form_bottom {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding: 20px 0 0;
  flex-direction: column;
  gap: 40px;
}

.career_popup__form_policy a,
.career_popup__form_policy a:hover,
.career_popup__form_policy a:active,
.career_popup__form_policy a:focus,
.feedback_popup__form_policy a,
.feedback_popup__form_policy a:hover,
.feedback_popup__form_policy a:active,
.feedback_popup__form_policy a:focus {
  text-decoration: underline;
  text-underline-offset: 2px;
}

.career_bottom__block .expertise__panel:last-child,
.feedback_bottom__block .expertise__panel:last-child {
  border-bottom: none;
}

.career_popup__head,
.feedback_popup__head {
  padding: 0 0 50px;
}

.career_popup__close,
.feedback_popup__close {
  display: block;
  width: 48px;
  height: 48px;
  border: none;
  border-radius: 50%;
  position: absolute;
  top: 24px;
  right: 24px;
  z-index: 1;
}

.career_popup__close svg,
.feedback_popup__close svg {
  height: 20px;
  width: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  color: var(--text);
  -webkit-transform: translate(-50%, -50%) rotate(0deg);
  transform: translate(-50%, -50%) rotate(0deg);
  -webkit-transition: -webkit-transform 0.3s linear, color 0.3s linear;
  transition: transform 0.3s linear, color 0.3s linear;
}

.career_popup__close:hover svg,
.feedback_popup__close:hover svg {
  -webkit-transform: translate(-50%, -50%) rotate(90deg);
  transform: translate(-50%, -50%) rotate(90deg);
}

/* end career */

/* start price */

.price__block {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 50%;
  padding: 160px 80px 80px;
  flex-direction: column;
  gap: 40px;
}

.price__divider {
  border-bottom: 1px solid var(--border);
}

.price__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin: 0 2px;
  padding: 100px 80px;
  flex-direction: column;
  gap: 40px;
  background-color: var(--bg);
}

.price__sublist {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  justify-content: space-between;
}

.price__item_block {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 5px;
}

.price__info {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  height: max-content;
  position: relative;
  -webkit-transform: translateY(5px);
  transform: translateY(5px);
}

.price__subitem {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  gap: 20px;
}

.price__subitem:nth-child(1) {
  width: 23%;
}

.price__swiper .price__subitem:nth-child(1) {
  width: 20%;
}

.price__swiper .price__subitem {
  width: 20%;
}

.price__info svg {
  width: 16px;
  height: 16px;
  position: relative;
  z-index: 2;
}

.price__info_absolute {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 230px;
  padding: 16px;
  flex-direction: column;
  gap: 8px;
  position: absolute;
  left: 50%;
  bottom: 30px;
  z-index: 1;
  opacity: 0;
  background-color: var(--bg);
  border: 1px solid var(--border);
  box-shadow: 0px 2px 7px 0px rgba(22, 21, 21, 0.12);
  border-radius: 4px;
  visibility: hidden;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  -webkit-transition: opacity 0.3s linear, visibility 0s linear;
  transition: opacity 0.3s linear, visibility 0s linear;
  -webkit-transition-delay: 0s, 0.3s;
  transition-delay: 0s, 0.3s;
}

 .price__info_absolute::before,
 .price__info_absolute::after {
  content: ''; 
  position: absolute;
  left: 50%;
  bottom: -20px;
  border: 10px solid transparent;
  border-top: 10px solid var(--border);
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
 }

 .price__info_absolute::after {
  border-top: 10px solid var(--bg);
  bottom: -19px; 
 }
/* ... */

